--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -68,41 +68,37 @@
             app:layout_constraintEnd_toEndOf="parent"
             tools:src="@mipmap/cloud3x" />
 
-        <LinearLayout
-            android:id="@+id/linearLayout"
-            android:layout_width="wrap_content"
+        <ImageView
+            android:id="@+id/main_weather_condition_icon"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            app:layout_constraintBottom_toTopOf="@+id/main_temp"
+            app:layout_constraintStart_toStartOf="@+id/main_temp"
+            tools:src="@drawable/ic_sun" />
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/main_weather_condition_description"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintEnd_toStartOf="@id/main_weather_image"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@id/main_weather_image">
-
-            <ImageView
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                tools:src="@drawable/ic_sun" />
-
-            <com.google.android.material.textview.MaterialTextView
-                style="@style/MainTextViewStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginStart="8dp"
-                android:textSize="20sp"
-                tools:text="Clear sky" />
-
-        </LinearLayout>
+            android:layout_gravity="center"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@+id/main_temp"
+            app:layout_constraintEnd_toStartOf="@+id/main_weather_image"
+            app:layout_constraintStart_toEndOf="@+id/main_weather_condition_icon"
+            app:layout_constraintTop_toTopOf="@+id/main_weather_condition_icon"
+            tools:text="Clear sky" />
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/main_temp"
             style="@style/MainTextViewStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="7dp"
             android:includeFontPadding="false"
             android:textSize="98sp"
-            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
-            app:layout_constraintStart_toStartOf="@+id/linearLayout"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
+            app:layout_constraintEnd_toStartOf="@+id/main_weather_image"
+            app:layout_constraintStart_toStartOf="parent"
             tools:text="25\u00B0" />
 
         <LinearLayout
@@ -110,9 +106,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            app:layout_constraintBottom_toBottomOf="@id/guideline"
             app:layout_constraintEnd_toEndOf="@+id/main_temp"
-            app:layout_constraintStart_toStartOf="@+id/main_temp"
-            app:layout_constraintTop_toBottomOf="@+id/main_temp">
+            app:layout_constraintStart_toStartOf="@+id/main_temp">
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -128,20 +124,21 @@
                     android:textSize="12sp" />
 
                 <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/main_temp_min_tv"
                     style="@style/MainTextViewStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="18sp"
+                    android:layout_gravity="center"
                     tools:text="18" />
 
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="1dp"
+                style="@style/DividerStyle"
                 android:layout_height="match_parent"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
-                android:background="@color/dividerColor"
                 android:orientation="vertical" />
 
             <LinearLayout
@@ -158,20 +155,21 @@
                     android:textSize="12sp" />
 
                 <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/main_temp_avg_tv"
                     style="@style/MainTextViewStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="18sp"
+                    android:layout_gravity="center"
                     tools:text="25" />
 
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="1dp"
+                style="@style/DividerStyle"
                 android:layout_height="match_parent"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
-                android:background="@color/dividerColor"
                 android:orientation="vertical" />
 
             <LinearLayout
@@ -188,10 +186,12 @@
                     android:textSize="12sp" />
 
                 <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/main_temp_max_tv"
                     style="@style/MainTextViewStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="18sp"
+                    android:layout_gravity="center"
                     tools:text="30" />
 
             </LinearLayout>
@@ -215,17 +215,16 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
+                    style="@style/AdditionalWeatherInformationIconStyle"
                     android:src="@drawable/ic_thermostat_24" />
 
                 <com.google.android.material.textview.MaterialTextView
-                    style="@style/MainTextViewStyle"
+                    android:id="@+id/main_pressure_mu_tv"
+                    style="@style/AdditionalWeatherInformationStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginStart="8dp"
-                    android:textSize="14sp"
                     tools:text="1.5 hPa" />
 
             </LinearLayout>
@@ -238,17 +237,16 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
+                    style="@style/AdditionalWeatherInformationIconStyle"
                     android:src="@drawable/ic_drop" />
 
                 <com.google.android.material.textview.MaterialTextView
-                    style="@style/MainTextViewStyle"
+                    android:id="@+id/main_humidity_mu_tv"
+                    style="@style/AdditionalWeatherInformationStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginStart="8dp"
-                    android:textSize="14sp"
                     tools:text="87 %" />
 
             </LinearLayout>
@@ -259,17 +257,16 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
+                    style="@style/AdditionalWeatherInformationIconStyle"
                     android:src="@drawable/ic_flag_24" />
 
                 <com.google.android.material.textview.MaterialTextView
-                    style="@style/MainTextViewStyle"
+                    android:id="@+id/main_wind_speed_mu_tv"
+                    style="@style/AdditionalWeatherInformationStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginStart="8dp"
-                    android:textSize="14sp"
                     tools:text="5 m/s" />
 
             </LinearLayout>
@@ -294,17 +291,16 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
+                    style="@style/AdditionalWeatherInformationIconStyle"
                     android:src="@drawable/ic_sunrise" />
 
                 <com.google.android.material.textview.MaterialTextView
-                    style="@style/MainTextViewStyle"
+                    android:id="@+id/main_sunrise_time_tv"
+                    style="@style/AdditionalWeatherInformationStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="bottom"
                     android:layout_marginStart="8dp"
-                    android:textSize="14sp"
                     tools:text="4:30" />
 
             </LinearLayout>
@@ -316,23 +312,75 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
+                    style="@style/AdditionalWeatherInformationIconStyle"
                     android:src="@drawable/ic_sunset" />
 
                 <com.google.android.material.textview.MaterialTextView
-                    style="@style/MainTextViewStyle"
+                    android:id="@+id/main_sunset_time_tv"
+                    style="@style/AdditionalWeatherInformationStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="bottom"
                     android:layout_marginStart="8dp"
-                    android:textSize="14sp"
                     tools:text="22:30" />
 
             </LinearLayout>
         </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+    
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        style="?attr/bottomSheetStyle"
+        android:id="@+id/main_bottom_sheets"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:elevation="8dp"
+        android:background="@drawable/bg_main_bottom_sheets"
+        app:behavior_hideable="false"
+        app:behavior_peekHeight="160dp"
+        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
+        android:layout_gravity="end" >
+
+        <LinearLayout
+            android:id="@+id/main_bottom_sheets_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:elevation="16dp"
+            android:orientation="vertical">
+            
+            <LinearLayout
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/bg_main_bottom_sheets_swiper"
+                android:orientation="horizontal"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="4dp" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/main_hourly_list"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:overScrollMode="never"
+                android:layout_marginBottom="8dp"
+                tools:layout_height="80dp"/>
+
+            <LinearLayout
+                style="@style/DividerStyle"
+                android:layout_width="match_parent"
+                android:layout_marginBottom="8dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/main_daily_list"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:overScrollMode="never"
+                tools:layout_height="16dp"/>
+
+        </LinearLayout>
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
