--- a/app/src/main/res/layout/item_main_hourly.xml
+++ b/app/src/main/res/layout/item_main_hourly.xml
@@ -15,7 +15,7 @@
             android:layout_height="wrap_content"
             android:textSize="17sp"
             android:layout_gravity="center_horizontal"
-            android:text="19:00" />
+            tools:text="19:00" />
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/item_hourly_temp_tv"
@@ -27,7 +27,7 @@
             android:layout_marginTop="8dp"
             android:layout_gravity="center_horizontal"
             android:textSize="20sp"
-            android:text="20\u00B0" />
+            tools:text="20\u00B0" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -51,7 +51,7 @@
                 android:layout_gravity="center"
                 android:layout_marginStart="8dp"
                 android:textSize="12sp"
-                android:text="25 %"/>
+                tools:text="25 %"/>
             
         </LinearLayout>
 
