--- a/app/src/main/res/layout/item_main_daily.xml
+++ b/app/src/main/res/layout/item_main_daily.xml
@@ -2,7 +2,8 @@
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
     
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_marginStart="8dp"
@@ -17,7 +18,7 @@
             style="@style/MainTextViewStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="20 Tuesday"
+            tools:text="20 Tuesday"
             android:textSize="17sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -43,7 +44,7 @@
             app:layout_constraintStart_toEndOf="@+id/item_daily_weather_condition_icon"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:text="25 %"/>
+            tools:text="25 %"/>
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/item_daily_min_temp_tv"
@@ -55,7 +56,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:text="19\u00B0"/>
+            tools:text="19\u00B0"/>
 
         <LinearLayout
             android:id="@+id/item_daily_divider"
@@ -78,7 +79,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/item_daily_divider"
-            android:text="28\u00B0"/>
+            tools:text="28\u00B0"/>
 
 
 
